2009-04-26  David Engster  <dengste@eml.cc>

	* sb-sueddeutsche-de.el (shimbun-sueddeutsche-de-group-url): New RSS
	feeds.
	(shimbun-sueddeutsche-de-content-start)
	(shimbun-sueddeutsche-de-content-end): Adapt to new layout.
	(shimbun-get-headers): Removed. Use shimbun-article-url instead.
	(shimbun-rss-build-message-id): New URL scheme.
	(shimbun-clear-contents): Adapt to new layout.
	(shimbun-article-url): Retrieve URL for print version of article.

2009-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-clear-contents): Remove ads.

2009-04-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-sankei.el (shimbun-sankei-group-table): Update index url for
	sankeisho group.

2009-04-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-kantei.el (shimbun-clear-contents): Don't remove succeeding
	contents.

2009-04-05  ARISAWA Akihiro  <ari@mbf.ocn.ne.jp>

	* sb-atom.el (shimbun-atom-get-headers): Check `updated' and
	`published' element.

	* sb-atom-hash.el (content-hash-update-items-impl): Ditto.

2009-04-05  ARISAWA Akihiro  <ari@mbf.ocn.ne.jp>

	* sb-hash.el: Don't inherit shimbun;
	Rename class name shimbun-hash -> content-hash.

	* sb-rss-hash.el (shimbun-rss-hash): Don't inherit shimbun-hash;
	Add a new slot `content'.
	(rss-content-hash): New class.
	(shimbun-article): New overriden method.

	* sb-atom-hash.el (shimbun-atom-hash): Don't inherit shimbun-hash;
	Add a new slot `content'.
	(atom-content-hash): New class.
	(shimbun-article): New overriden method.

2009-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-content-start, shimbun-asahi-content-end):
	Update.

2009-03-27  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-rss.el: Don't use internal accessor because luna does not
	support it in multiple inheritance.
	(shimbun-rss-initialize-ignored-subject): Use luna-set-slot-value
	instead of shimbun-rss-set-ignored-subject-internal.
	(shimbun-rss-get-headers): Use luna-slot-value instead of